--- a/webapp/view/Start.view.xml
+++ b/webapp/view/Start.view.xml
@@ -1,65 +1,60 @@
-<mvc:View controllerName="UI5-features.controller.Start" xmlns:html="http://www.w3.org/1999/xhtml"
-	xmlns:mvc="sap.ui.core.mvc" xmlns:f="sap.ui.layout.form" displayBlock="true" xmlns="sap.m">
-	<App>
-		<pages>
-			<Page title="{i18n>title}">
-				<content>
-					<Text text="I'm body"/>
-					<Input value="I show data from model: {ModelName>/element1/field1}"/>
-					<Input value="I show data from JSON file: {MyJSONModel>/element1/field1}"/>
-					<Table id="tab1" items="{MyJSONModel>/table1}" itemPress="onClickOnItem">
-						<columns>
-							<Column width="auto">
-								<Label text="FieldName0"/>
-							</Column>
-							<Column width="auto">
-								<Label text="FieldName1"/>
-							</Column>
-							<Column width="auto">
-								<Label text="FieldName2"/>
-							</Column>
-						</columns>
-						<items>
-							<ColumnListItem type="Active">
-								<Text text="Hi!"/>
-								<Text text="{MyJSONModel>field1}"/>
-								<Text text="{MyJSONModel>field2}"/>
-							</ColumnListItem>
-						</items>
-					</Table>
-					<f:SimpleForm id="formForElementBinding">
-						<f:content>
-							<Label text = "Hidden field 1" />
-							<Input value="{MyJSONModel>hidden_field1}"/>
-							<Label text = "Hidden field 2" />
-							<Input value="{MyJSONModel>hidden_field2}"/>
-						</f:content>
-					</f:SimpleForm>
-					
-					<Table id="tab2" items="{MyODataModel>/ContactSet}">
-						<columns>
-							<Column width="auto">
-								<Label text="FieldName0"/>
-							</Column>
-							<Column width="auto">
-								<Label text="FieldName1"/>
-							</Column>
-						</columns>
-						<items>
-							<ColumnListItem>
-								<Text text="{MyODataModel>ContactGuid}"/>
-								<Text text="{MyODataModel>Address/Street}"/>
-							</ColumnListItem>
-						</items>
-					</Table>
-				</content>
-				<footer>
-					<Toolbar>
-						<Text id="txtToolbar" text="I'm toolbar footer"/>
-						<Button id="btnToolbar" text="I'm toolbar button" press="action"/>
-					</Toolbar>
-				</footer>
-			</Page>
-		</pages>
-	</App>
+<mvc:View controllerName="UI5-features.controller.Start" xmlns="sap.m" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:mvc="sap.ui.core.mvc" xmlns:f="sap.ui.layout.form">
+	<Page title="{i18n>title}">
+		<content>
+			<Text text="I'm body"/>
+			<Input value="I show data from model: {ModelName>/element1/field1}"/>
+			<Input value="I show data from JSON file: {MyJSONModel>/element1/field1}"/>
+			<Table id="tab1" items="{MyJSONModel>/table1}" itemPress="onClickOnItem">
+				<columns>
+					<Column width="auto">
+						<Label text="FieldName0"/>
+					</Column>
+					<Column width="auto">
+						<Label text="FieldName1"/>
+					</Column>
+					<Column width="auto">
+						<Label text="FieldName2"/>
+					</Column>
+				</columns>
+				<items>
+					<ColumnListItem type="Active">
+						<Text text="Hi!"/>
+						<Text text="{MyJSONModel>field1}"/>
+						<Text text="{MyJSONModel>field2}"/>
+					</ColumnListItem>
+				</items>
+			</Table>
+			<f:SimpleForm id="formForElementBinding">
+				<f:content>
+					<Label text="Hidden field 1"/>
+					<Input value="{MyJSONModel>hidden_field1}"/>
+					<Label text="Hidden field 2"/>
+					<Input value="{MyJSONModel>hidden_field2}"/>
+				</f:content>
+			</f:SimpleForm>
+			<Table id="tab2" items="{MyODataModel>/ContactSet}">
+				<columns>
+					<Column width="auto">
+						<Label text="FieldName0"/>
+					</Column>
+					<Column width="auto">
+						<Label text="FieldName1"/>
+					</Column>
+				</columns>
+				<items>
+					<ColumnListItem>
+						<Text text="{MyODataModel>ContactGuid}"/>
+						<Text text="{MyODataModel>Address/Street}"/>
+					</ColumnListItem>
+				</items>
+			</Table>
+		</content>
+		<footer>
+			<Toolbar>
+				<Text id="txtToolbar" text="I'm toolbar footer"/>
+				<Button id="btnToolbar" text="I'm toolbar button" press="actionBtn1"/>
+				<Button id="btnToolbar2" text="Route to the next screen" press="actionBtn2"/>
+			</Toolbar>
+		</footer>
+	</Page>
 </mvc:View>
