--- a/webapp/view/Second.view.xml
+++ b/webapp/view/Second.view.xml
@@ -1,7 +1,7 @@
-<mvc:View xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
-	<Page title="{i18n>titleSecond}">
+<mvc:View controllerName="UI5-features.controller.Second" xmlns="sap.m" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:mvc="sap.ui.core.mvc">
+	<Page title="{i18n>titleSecond}" showNavButton = "true" navButtonPress="onNavBack">
 		<headerContent>
-
+			
 		</headerContent>
 		<content>
 			<Table id="tab2" items="{MyODataModel>/ContactSet}">
