--- a/webapp/view/Start.view.xml
+++ b/webapp/view/Start.view.xml
@@ -5,16 +5,17 @@
 			<l:VerticalLayout id="containerLayout" width="100%">
 				<l:BlockLayout id="BlockLayout" background="Light">
 					<l:BlockLayoutRow >
-						<l:BlockLayoutCell title = "Simple binding" width = "2">
-							<Input value="I show data from model: {ModelName>/element1/field1}"/>
-							<Input value="I show data from JSON file: {MyJSONModel>/element1/field1}"/>
+						<l:BlockLayoutCell title = "Simple binding" width = "3">
+							<Input value="Data from hardcoded model: {ModelName>/element1/field1}"/>
+							<Input value="Data from model based on json file: {MyJSONModel>/element1/field1}"/>
+							<Input value="Expression binding based on random: {= Math.random() > 0.5 ? 'Last Math.random() result is more than 0.5' : 'Last Math.random() result is less than 0.5' }"/>
 						</l:BlockLayoutCell>
 						<l:BlockLayoutCell>
 							<Text text = "It's two single elements that stored in two independent local models. One of this two models is defined right in code while second one is defined in file JSONModel.json" />
 						</l:BlockLayoutCell>
 					</l:BlockLayoutRow>
 					<l:BlockLayoutRow>
-						<l:BlockLayoutCell title = "Element binding: list" width = "2">
+						<l:BlockLayoutCell title = "Element binding" width = "3">
 							<Table id="tab1" items="{MyJSONModel>/table1}" itemPress="onClickOnItem">
 								<columns>
 									<Column width="auto">
