--- a/webapp/view/Start.view.xml
+++ b/webapp/view/Start.view.xml
@@ -6,17 +6,18 @@
 				<l:BlockLayout id="BlockLayout" background="Light">
 					<l:BlockLayoutRow>
 						<l:BlockLayoutCell title="Simple binding" width="3">
-							<f:SimpleForm layout="ResponsiveGridLayout" labelSpanL="3" labelSpanM="8" labelSpanS="12">
+							<f:SimpleForm layout="ResponsiveGridLayout" labelSpanL="3" labelSpanM="6" labelSpanS="12">
 								<f:content>
 									<Label text="Hardcoded model data binding"/>
 									<Input value="{ModelName>/element1/field1}"/>
 									<Label text="JSON model data binding"/>
 									<Input value="Data from model based on json file: {MyJSONModel>/element1/field1}"/>
 									<Label text="Expression binding based on random"/>
-									<Input value="{= Math.random() > 0.5 ? 'Last Math.random() result is more than 0.5' : 'Last Math.random() result is less than 0.5' }"/>
+									<Input value="{= Math.random() > 0.5 ? 'Last Math.random() result is more than 0.5' : 'Last Math.random() result is less than or equal to 0.5' }"/>
 									<Label text="Binding with 'Email' formatting"/>
 									<Input value="{MyJSONModel>/element1/field4email}" type="Email"/>
-									<Label text="Binding with custom formatting"/>
+									<Label text="Binding with custom formatting(for value:{MyJSONModel>/element1/field5float})"/>
+									<Input value="{ path:'MyJSONModel>/element1/field5float', formatter: '.formatter.characteristicOfValue' }" />
 								</f:content>
 							</f:SimpleForm>
 						</l:BlockLayoutCell>
