--- a/webapp/view/Fourth.view.xml
+++ b/webapp/view/Fourth.view.xml
@@ -1,10 +1,22 @@
-<mvc:View controllerName="UI5-features.controller.Fourth" xmlns="sap.m" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:mvc="sap.ui.core.mvc">
-	<Page title="{i18n>titleFourth}" showNavButton = "true" navButtonPress="onNavBack">
-		<headerContent>
-	
-		</headerContent>
+<mvc:View controllerName="UI5-features.controller.Fourth" xmlns="sap.m" xmlns:html="http://www.w3.org/1999/xhtml"
+	xmlns:mvc="sap.ui.core.mvc" xmlns:f="sap.ui.layout.form">
+	<Page title="{i18n>titleFourth}" showNavButton="true" navButtonPress="onNavBack">
+		<headerContent></headerContent>
 		<content>
-	
+			<f:SimpleForm id="formElementDetails" layout="ResponsiveGridLayout">
+				<f:content>
+					<Label text="Field 1"/>
+					<Input value="{MyJSONModel>field1}" editable="false"/>
+					<Label text="Field 2"/>
+					<Input value="{MyJSONModel>field2}" editable="false"/>
+					<Label text="Hidden field 1"/>
+					<Input value="{MyJSONModel>hidden_field1}" change="onChangeFormElement"/>
+					<Label text="Hidden field 2"/>
+					<Input value="{MyJSONModel>hidden_field2}" change="onChangeFormElement"/>
+					<MessageStrip id="msgStripElement" visible="false" type="Warning" text="Note: Changes on form data affect the data model"
+						showCloseButton="true"/>
+				</f:content>
+			</f:SimpleForm>
 		</content>
 	</Page>
 </mvc:View>
