--- a/webapp/view/Fourth.view.xml
+++ b/webapp/view/Fourth.view.xml
@@ -3,7 +3,7 @@
 	<Page title="{i18n>titleFourth}" showNavButton="true" navButtonPress="onNavBack">
 		<headerContent></headerContent>
 		<content>
-			<f:SimpleForm id="formElementDetails" layout="ResponsiveGridLayout">
+			<f:SimpleForm id="formElementDetails" layout="ResponsiveGridLayout" editable = "true">
 				<f:content>
 					<Label text="Field 1"/>
 					<Input value="{MyJSONModel>field1}" editable="false"/>
