--- a/webapp/view/Start.view.xml
+++ b/webapp/view/Start.view.xml
@@ -12,7 +12,7 @@
 				<l:BlockLayout id="BlockLayout" background="Light">
 					<l:BlockLayoutRow>
 						<l:BlockLayoutCell title="Simple binding" width="3">
-							<f:SimpleForm layout="ResponsiveGridLayout" labelSpanL="3" labelSpanM="6" labelSpanS="12">
+							<f:SimpleForm layout="ResponsiveGridLayout" editable = "true" labelSpanL="3" labelSpanM="6" labelSpanS="12">
 								<f:content>
 									<Label text="Hardcoded model data binding"/>
 									<Input value="{ModelName>/element1/field1}"/>
@@ -54,7 +54,7 @@
 							</l:VerticalLayout>
 						</l:BlockLayoutCell>
 						<l:BlockLayoutCell title="Selected element" width="2">
-							<f:SimpleForm id="formForElementBinding" layout="ResponsiveGridLayout">
+							<f:SimpleForm id="formForElementBinding" layout="ResponsiveGridLayout" editable = "true">
 								<f:content>
 									<Label text="Field 1"/>
 									<Input value="{MyJSONModel>field1}" editable="false"/>
