Mock data for ContactSet has been added but doesn't work :(

--- a/webapp/view/Second.view.xml
+++ b/webapp/view/Second.view.xml
@@ -15,7 +15,7 @@
 				</columns>
 				<items>
 					<ColumnListItem>
-						<Text text="{MyODataModel>ContactGuid}"/>
+						<Text text="{MyODataModel>FirstName}"/>
 						<Text text="{MyODataModel>Address/Street}"/>
 					</ColumnListItem>
 				</items>
